--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -34,7 +34,7 @@
     <!-- Main -->
     <main>
         <!-- Hero -->
-        <section class="hero">
+        <section class="hero section">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button class="hero-btn" type="button">Order Service</button>
@@ -42,7 +42,7 @@
         </section>
 
         <!-- Advantages -->
-        <section class="advantages">
+        <section class="advantages section">
             <div class="container">
                 <h2 class="visually-hidden">Advantages</h2>
                 <ul class="advantages-list">
@@ -75,7 +75,7 @@
         </section>
 
         <!-- Our Team -->
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
@@ -104,7 +104,7 @@
         </section>
 
         <!-- Portfolio -->
-        <section class="portfolio">
+        <section class="portfolio section">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
