image change path

--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-1.jpg" alt="young man with a full beard">
+                        <img class="team-image" src="./img-1.jpg" alt="young man with a full beard">
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-role">Product Designer</p>
                     </li>
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-2.jpg" alt="smiling young man">
+                        <img class="team-image" src="./img-2.jpg" alt="smiling young man">
                         <h3 class="team-name">Tom Ford</h3>
                         <p class="team-role">Frontend Developer</p>
                     </li>
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-3.jpg" alt="young woman in a pink pullover">
+                        <img class="team-image" src="./img-3.jpg.jpg" alt="young woman in a pink pullover">
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-role">Marketing</p>
                     </li>
                     <li class="team-item">
-                        <img class="team-image" src="./images/img-4.jpg" alt="young man in a grey t-shirt">
+                        <img class="team-image" src="./img-4.jpg.jpg" alt="young man in a grey t-shirt">
                         <h3 class="team-name">Daniel Wilson</h3>
                         <p class="team-role">UI Designer</p>
                     </li>
