--- a/index.html
+++ b/index.html
@@ -1,157 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!-- Header -->
     <header class="header">
-        <div class="container">
-            <nav class="header-nav">
-                <a class="header-logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
-                <ul class="header-nav-list">
-                    <li><a class="nav-link" href="./index.html">Studio</a></li>
-                    <li><a class="nav-link" href="#">Portfolio</a></li>
-                    <li><a class="nav-link" href="#">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="header-contacts">
-                <ul class="contacts-list">
-                    <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
-        </div>
+      <div class="container">
+        <nav class="nav">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="header-logo-studio">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link" href="#">Portfolio</a></li>
+            <li><a class="nav-link" href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="header-contacts">
+          <ul class="contacts-list">
+            <li>
+              <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
-
     <!-- Main -->
     <main>
-        <!-- Hero -->
-        <section class="hero section">
-            <div class="container">
-                <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button class="hero-btn" type="button">Order Service</button>
-            </div>
-        </section>
-
-        <!-- Advantages -->
-        <section class="advantages section">
-            <div class="container">
-                <h2 class="visually-hidden">Advantages</h2>
-                <ul class="advantages-list">
-                    <li class="advantages-item">
-                        <h3 class="advantages-title">Strategy</h3>
-                        <p class="advantages-text">
-                            Our goal is to identify the business problem to walk away with the perfect and creative solution.
-                        </p>
-                    </li>
-                    <li class="advantages-item">
-                        <h3 class="advantages-title">Punctuality</h3>
-                        <p class="advantages-text">
-                            Bring the key message to the brand's audience for the best price within the shortest possible time.
-                        </p>
-                    </li>
-                    <li class="advantages-item">
-                        <h3 class="advantages-title">Diligence</h3>
-                        <p class="advantages-text">
-                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                        </p>
-                    </li>
-                    <li class="advantages-item">
-                        <h3 class="advantages-title">Technologies</h3>
-                        <p class="advantages-text">
-                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                        </p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Our Team -->
-        <section class="team section">
-            <div class="container">
-                <h2 class="team-title">Our Team</h2>
-                <ul class="team-list">
-                    <li class="team-item">
-                        <img class="team-image" src="./img-1.jpg" alt="young man with a full beard">
-                        <h3 class="team-name">Mark Guerrero</h3>
-                        <p class="team-role">Product Designer</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-image" src="./img-2.jpg" alt="smiling young man">
-                        <h3 class="team-name">Tom Ford</h3>
-                        <p class="team-role">Frontend Developer</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-image" src="./img-3.jpg.jpg" alt="young woman in a pink pullover">
-                        <h3 class="team-name">Camila Garcia</h3>
-                        <p class="team-role">Marketing</p>
-                    </li>
-                    <li class="team-item">
-                        <img class="team-image" src="./img-4.jpg.jpg" alt="young man in a grey t-shirt">
-                        <h3 class="team-name">Daniel Wilson</h3>
-                        <p class="team-role">UI Designer</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-        <!-- Portfolio -->
-        <section class="portfolio section">
-            <div class="container">
-                <h2 class="portfolio-title">Our Portfolio</h2>
-                <ul class="portfolio-list">
-                    <li class="portfolio-item">
-                        <img src="./images/img_p-1.jpg" alt="bank app preview examples">
-                        <h3 class="portfolio-name">Banking App</h3>
-                        <p class="portfolio-category">App</p>
-                    </li>
-                    <li class="portfolio-item">
-                        <img src="./images/img_p-2.jpg" alt="phone near the cash reader">
-                        <h3 class="portfolio-name">Cashless Payment</h3>
-                        <p class="portfolio-category">Marketing</p>
-                    </li>
-                    <li class="portfolio-item">
-                        <img src="./images/img_p-3.jpg" alt="phone near laptop">
-                        <h3 class="portfolio-name">Meditation App</h3>
-                        <p class="portfolio-category">App</p>
-                    </li>
-                    <li class="portfolio-item">
-                        <img src="./images/img_p-4.jpg" alt="phone above the car cockpit">
-                        <h3 class="portfolio-name">Taxi Service</h3>
-                        <p class="portfolio-category">Marketing</p>
-                    </li>
-                    <li class="portfolio-item">
-                        <img src="./images/img_p-5.jpg" alt="phone and screen illustrations">
-                        <h3 class="portfolio-name">Screen Illustrations</h3>
-                        <p class="portfolio-category">Design</p>
-                    </li>
-                    <li class="portfolio-item">
-                        <img src="./images/img_p-6.jpg" alt="young girl looking at her phone">
-                        <h3 class="portfolio-name">Online Courses</h3>
-                        <p class="portfolio-category">Marketing</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
+      <!-- Hero Section -->
+      <section class="solutions">
+        <div class="container">
+          <h1 class="solutions-title">Effective Solutions for Your Business</h1>
+          <button class="solutions-button" type="button">Order Service</button>
+        </div>
+      </section>
+      <!-- Advantages Section -->
+      <section class="advantages">
+        <div class="container">
+          <h2 hidden>Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantage-item">
+              <h3 class="advantages-title">Strategy</h3>
+              <p class="advantages-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantages-title">Punctuality</h3>
+              <p class="advantages-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantages-title">Diligence</h3>
+              <p class="advantages-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantage-item">
+              <h3 class="advantages-title">Technologies</h3>
+              <p class="advantages-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Our Team Section -->
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-role">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-role">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-3.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-role">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-image"
+                src="./images/img-4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-role">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Portfolio Section -->
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img_p-1.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="portfolio-name">Banking App</h3>
+              <p class="portfolio-category">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img_p-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="portfolio-name">Cashless Payment</h3>
+              <p class="portfolio-category">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-image"
+                src="./images/img_p-3.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="portfolio-name">Meditation App</h3>
+              <p class="portfolio-category">App</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-        </div>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-logo-studio">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
 
