--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <img
                 class="team-image"
                 src="./images/img-1.jpg"
-                alt="Mark Guerrero"
+                alt="young man with a full beard"
                 width="264"
               />
               <h3 class="team-name">Mark Guerrero</h3>
@@ -106,7 +106,7 @@
               <img
                 class="team-image"
                 src="./images/img-2.jpg"
-                alt="Tom Ford"
+                alt="smiling young man"
                 width="264"
               />
               <h3 class="team-name">Tom Ford</h3>
@@ -116,7 +116,7 @@
               <img
                 class="team-image"
                 src="./images/img-3.jpg"
-                alt="Camila Garcia"
+                alt="young woman in a pink pullover"
                 width="264"
               />
               <h3 class="team-name">Camila Garcia</h3>
@@ -126,7 +126,7 @@
               <img
                 class="team-image"
                 src="./images/img-4.jpg"
-                alt="Daniel Wilson"
+                alt="young man in a grey t-shirt"
                 width="264"
               />
               <h3 class="team-name">Daniel Wilson</h3>
@@ -144,7 +144,7 @@
               <img
                 class="portfolio-image"
                 src="./images/img_p-1.jpg"
-                alt="Banking App"
+                alt="bank app preview examples"
                 width="360"
               />
               <h3 class="portfolio-name">Banking App</h3>
@@ -154,7 +154,7 @@
               <img
                 class="portfolio-image"
                 src="./images/img_p-2.jpg"
-                alt="Cashless Payment"
+                alt="phone near the cash reader"
                 width="360"
               />
               <h3 class="portfolio-name">Cashless Payment</h3>
@@ -164,7 +164,7 @@
               <img
                 class="portfolio-image"
                 src="./images/img_p-3.jpg"
-                alt="Meditation App"
+                alt="phone near laptop"
                 width="360"
               />
               <h3 class="portfolio-name">Meditation App</h3>
