--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <nav class="header-nav">
+            <nav class="nav">
                 <a class="header-logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
-                <ul class="header-nav-list">
+                <ul class="nav-list">
                     <li><a class="nav-link" href="./index.html">Studio</a></li>
-                    <li><a class="nav-link" href="#">Portfolio</a></li>
-                    <li><a class="nav-link" href="#">Contacts</a></li>
+                    <li><a class="nav-link" href="">Portfolio</a></li>
+                    <li><a class="nav-link" href="">Contacts</a></li>
                 </ul>
             </nav>
             <address class="header-contacts">
-                <ul class="contacts-list">
+                <ul>
                     <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
@@ -33,42 +33,34 @@
 
     <!-- Main -->
     <main>
-        <!-- Hero -->
-        <section class="hero">
+        <!-- Solutions -->
+        <section class="solutions">
             <div class="container">
-                <h1 class="hero-title">Effective Solutions for Your Business</h1>
-                <button class="hero-btn" type="button">Order Service</button>
+                <h1 class="solutions-title">Effective Solutions for Your Business</h1>
+                <button class="solutions-button" type="button">Order Service</button>
             </div>
         </section>
 
         <!-- Advantages -->
         <section class="advantages">
             <div class="container">
-                <h2 class="visually-hidden">Advantages</h2>
+                <h2 hidden>Advantages</h2>
                 <ul class="advantages-list">
-                    <li class="advantages-item">
+                    <li>
                         <h3 class="advantages-title">Strategy</h3>
-                        <p class="advantages-text">
-                            Our goal is to identify the business problem to walk away with the perfect and creative solution.
-                        </p>
+                        <p class="advantages-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li>
                         <h3 class="advantages-title">Punctuality</h3>
-                        <p class="advantages-text">
-                            Bring the key message to the brand's audience for the best price within the shortest possible time.
-                        </p>
+                        <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li>
                         <h3 class="advantages-title">Diligence</h3>
-                        <p class="advantages-text">
-                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-                        </p>
+                        <p class="advantages-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
-                    <li class="advantages-item">
+                    <li>
                         <h3 class="advantages-title">Technologies</h3>
-                        <p class="advantages-text">
-                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                        </p>
+                        <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
@@ -103,40 +95,52 @@
             </div>
         </section>
 
-        <!-- Portfolio -->
+        <!-- Our Portfolio -->
         <section class="portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/img_p-1.jpg" alt="bank app preview examples">
-                        <h3 class="portfolio-name">Banking App</h3>
-                        <p class="portfolio-category">App</p>
+                        <img class="portfolio-image" src="./images/img_p-1.jpg" alt="bank app preview examples">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Banking App</h3>
+                            <p class="portfolio-category">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/img_p-2.jpg" alt="phone near the cash reader">
-                        <h3 class="portfolio-name">Cashless Payment</h3>
-                        <p class="portfolio-category">Marketing</p>
+                        <img class="portfolio-image" src="./images/img_p-2.jpg" alt="phone near the cash reader">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Cashless Payment</h3>
+                            <p class="portfolio-category">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/img_p-3.jpg" alt="phone near laptop">
-                        <h3 class="portfolio-name">Meditation App</h3>
-                        <p class="portfolio-category">App</p>
+                        <img class="portfolio-image" src="./images/img_p-3.jpg" alt="phone near laptop">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Meditation App</h3>
+                            <p class="portfolio-category">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/img_p-4.jpg" alt="phone above the car cockpit">
-                        <h3 class="portfolio-name">Taxi Service</h3>
-                        <p class="portfolio-category">Marketing</p>
+                        <img class="portfolio-image" src="./images/img_p-4.jpg" alt="phone above the car cockpit">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Taxi Service</h3>
+                            <p class="portfolio-category">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/img_p-5.jpg" alt="phone and screen illustrations">
-                        <h3 class="portfolio-name">Screen Illustrations</h3>
-                        <p class="portfolio-category">Design</p>
+                        <img class="portfolio-image" src="./images/img_p-5.jpg" alt="phone and screen illustrations">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Screen Illustrations</h3>
+                            <p class="portfolio-category">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/img_p-6.jpg" alt="young girl looking at her phone">
-                        <h3 class="portfolio-name">Online Courses</h3>
-                        <p class="portfolio-category">Marketing</p>
+                        <img class="portfolio-image" src="./images/img_p-6.jpg" alt="young girl looking at her phone">
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Online Courses</h3>
+                            <p class="portfolio-category">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -147,9 +151,7 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
 </body>
