--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
             </nav>
             <address class="header-contacts">
                 <ul>
-                    <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li>
+                        <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
                 </ul>
             </address>
         </div>
