--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <address class="header-contacts">
-                <ul>
+                <ul class="header-contacts-list">
                     <li>
                         <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
