--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Advantages -->
         <section class="advantages">
             <div class="container">
-                <h2 visually-hidden>Advantages</h2>
+                <h2 class="visually-hidden">Advantages</h2>
                 <ul class="advantages-list">
                     <li class="advantages-item">
                         <h3 class="advantages-title">Strategy</h3>
