--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               </ul>
             </div>
           </section>
-
+    </main>
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
