--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!-- Our Portfolio -->
         <section class="portfolio">
-            <div class="container">
+            <div class="container portfolio-container">
               <h2 class="portfolio-title">Our Portfolio</h2>
               <ul class="portfolio-list">
                 <li class="portfolio-item">
